manifests/frontend/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  replicas: 1
  revisionHistoryLimit: 15
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: "gitlab.praktikum-services.ru:5050/a.cherkashin/momo-store\
            /momo-frontend:latest"
          imagePullPolicy: Always
          resources:
            requests:
              memory: "512Mi"
              cpu: "0.1"
            limits:
              memory: "1025Mi"
              cpu: "0.2"
          ports:
            - name: frontend
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 30
            timeoutSeconds: 1
            failureThreshold: 6
          volumeMounts:
            - name: nginx-conf
              mountPath: /etc/nginx/conf.d/momo-store.conf
              subPath: momo-store.conf
              readOnly: true
      volumes:
        - name: nginx-conf
          configMap:
            name: nginx-conf
            items:
              - key: momo-store.conf
                path: momo-store.conf
      imagePullSecrets:
        - name: docker-config-secret
