manifests/frontend/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  tls:
    - hosts:
      - "momo.cherkashin.org"
      secretName: letsencrypt
  rules:
    # Хост определяет правило направления траффика по доменному имени
    - host: "momo.cherkashin.org"
      http:
        # Для различных путей в URL можно указать различные бэкенд-сервисы
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
              # Заранее создан сервис типа ClusterIP
              # Он выступает в качестве бэкенда нашего Ingress
                name: frontend
                port:
                # У сервиса может быть несколько портов, указываем нужный нам
                  number: 8080
